[package]
name = "ffpack"
version = "0.0.1-dev"
edition = "2021"

[features]
# Libraries only used by the binary
binary = [ "tracing-subscriber" ]

[[bin]]
name = "ffpack"
required-features = ["binary"]

[dependencies]
enum_dispatch = "0.3.8"
once_cell = "1.12.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
snafu = "0.7.1"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.11"
